<resources>
    <string name="app_name">NovoMarket</string>
    <string name="valnovo">NovoMarket</string>
    <string name="valregistro">Registro</string>
    <string name="vallogin">Login</string>
    <string name="valtexto">Texto</string>
    <string name="valmenu">Menu</string>
    <string name="valcoment">¿Ya tiene una cuenta? Click para ir a login</string>
    <string name="valusername">Ingrese su Username</string>
    <string name="valpassword">Ingrese su Password</string>
    <string name="valcoment2">¿Aún no se ha registrado? Click para registrarse</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_cliente">Cliente</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="valcliente">Cliente</string>
    <string name="valGuardar">Guardar</string>
    <string name="ValEliminar">Eliminar</string>
    <string name="valEliminar">Eliminar</string>
    <string name="valIdCliente">Id Cliente</string>
    <string name="ValNombre">Nombre</string>
    <string name="ValApellidos">Apellidos</string>
    <string name="ValNumero">Numero</string>
    <string name="valVolver">Volver</string>
    <string name="valLCliente">Lista de Clientes</string>
    <string name="valCerrarSe">Cerrar Sesión</string>
    <string name="title_activity_proveedor">ProveedorActivity</string>
    <string name="valproveedores">Proveedores</string>
    <string name="validProveedor">Id Proveedor</string>
    <string name="validNomprove">Nombre del Proveedor</string>
    <string name="validRuc">RUC</string>
    <string name="validNomcontacto">Nombre del Contacto</string>
    <string name="validDireccion">Direccion</string>
    <string name="validTelefono">Telefono</string>
    <string name="valmetodopago">Metodo de Pago</string>
    <string name="validMetPag">Id Metodo Pago</string>
    <string name="validTipopago">Tipo de Pago</string>
    <string name="valIdCategoria">Id Categoria</string>
    <string name="ValNomCategoria">Nombre de la Categoria</string>
    <string name="valcategoria">CATEGORIAS</string>
    <string name="valingr">Ingresar</string>
    <string name="valclienteman">Cliente</string>
    <string name="valListCate">Lista Categorias</string>
    <string name="valListProductos">Lista de Productos</string>
    <string name="valListCliente">Lista de Clientes</string>
    <string name="valListProveedor">Lista Proveedores</string>
    <string name="valListMetodoPago">Lista Metodo de Pago</string>
    <string name="ValCat">Categorias</string>
    <string name="valProductos">Productos</string>
    <string name="valMetPago">Metodo Pago</string>
    <string name="ValProv">Proveedores</string>
    <string name="title_activity_comprobante">ComprobanteActivity</string>
    <string name="txtValRegProducto">Productos</string>
    <string name="txtHintNomProd">Nombre del producto</string>
    <string name="txtHintPrecioProd">Precio</string>
    <string name="txtHintFechaVenc">Fecha de vencimiento</string>
    <string name="txtHintStkActual">Stock Actual</string>
    <string name="txtHintStockMin">Stock Mínimo</string>
    <string name="txtHintCategoria">Categoria</string>
    <string name="txtHintProveedor">Proveedor</string>
    <string name="Volver">Regresar</string>
    <string name="valGenerarComprobante">Generar Comprobante</string>
    <string name="valFoto">Url de foto</string>
    <string name="txtHintFiltroProd">Qué producto está buscando?</string>

</resources>