<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado"
    tools:context=".CategoriaEdActivity">

    <LinearLayout
        android:layout_width="349dp"
        android:layout_height="321dp"
        android:orientation="vertical"
        android:padding="10px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txttitulocat"
        app:layout_constraintVertical_bias="0.289">

        <TextView
            android:id="@+id/IdCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valIdCategoria"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtIdCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            android:id="@+id/NomCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ValNomCategoria"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/txtNomCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valGuardar"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ValEliminar"
            app:backgroundTint="@color/black" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valVolver"
            app:backgroundTint="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/txttitulocat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/ValCat"
        android:textColor="#F6F6F6"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>